--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Header and Navigation -->
     <header class="bg-white shadow-md fixed w-full z-10">
         <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="#home" class="text-2xl font-bold text-blue-600 rounded-md p-2 hover:bg-blue-50 transition duration-300">Shazib.</a>
+            <a href="#home" class="text-2xl font-bold text-blue-600 rounded-md p-2 hover:bg-blue-50 transition duration-300">Portfolio.</a>
             <div class="hidden md:flex space-x-6">
                 <a href="#about" class="text-lg text-gray-700 hover:text-blue-600 font-medium transition duration-300 rounded-md px-3 py-2 hover:bg-blue-50">About</a>
                 <a href="#skills" class="text-lg text-gray-700 hover:text-blue-600 font-medium transition duration-300 rounded-md px-3 py-2 hover:bg-blue-50">Skills</a>
