--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
                     <img src="https://placehold.co/300x300/a0aec0/ffffff?text=Your+Photo" alt="Shazib Armaan" class="rounded-full shadow-xl w-60 h-60 object-cover border-4 border-blue-200">
                 </div>
                 <div class="lg:w-2/3 text-lg leading-relaxed text-gray-700 space-y-6">
-                    <p>Hello! I'm Shazib Armaan, a dedicated Software Developer with a passion for creating efficient, scalable, and user-friendly applications. My journey in technology began with a fascination for how software solves real-world problems, and it has since grown into a commitment to continuous learning and improvement.</p>
-                    <p>I specialize in full-stack development, with a strong foundation in both frontend technologies like <span class="font-semibold text-blue-600">HTML, CSS, JavaScript, and modern frameworks</span>, and backend expertise in <span class="font-semibold text-blue-600">Python and Node.js</span>. I love diving into complex challenges and transforming ideas into robust digital solutions.</p>
-                    <p>When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or enjoying a good book. I'm always eager to collaborate on innovative projects and connect with fellow tech enthusiasts!</p>
+                    <p>I earned a distinction in my Master’s in Data Analytics, where I explored real-world challenges like fraud detection using machine learning. My thesis, “Fraud Detection in Financial Transactions,” reflected my passion for combining data and problem-solving</p>
+                    <p>With a Bachelor's in Software Engineering and certifications in Data Analytics and Cybersecurity (Google), I’ve built a strong foundation in SQL, Python, Power BI, Tableau, and Excel. I’ve completed 30+ academic and personal projects — from sentiment analysis to predictive modeling and dashboard development — and gained hands-on experience in IT support, helping both users and systems run efficiently.</p>
+                    <p>What drives me is curiosity. I love asking “why,” finding patterns, and turning raw data into actionable insights. Whether working on financial data, customer engagement, or system optimization, I bring analytical thinking, clear communication, and a proactive mindset.</p>
+                    <p>If you're looking for someone who understands data, adapts fast, and thrives on solving problems — let’s connect.</p>
                 </div>
             </div>
         </section>
