--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Header and Navigation -->
     <header class="bg-white shadow-md fixed w-full z-10">
         <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="#home" class="text-2xl font-bold text-blue-600 rounded-md p-2 hover:bg-blue-50 transition duration-300">Shazib.</a>
+            <a href="#home" class="text-2xl font-bold text-blue-600 rounded-md p-2 hover:bg-blue-50 transition duration-300">Portfolio.</a>
             <div class="hidden md:flex space-x-6">
                 <a href="#about" class="text-lg text-gray-700 hover:text-blue-600 font-medium transition duration-300 rounded-md px-3 py-2 hover:bg-blue-50">About</a>
                 <a href="#skills" class="text-lg text-gray-700 hover:text-blue-600 font-medium transition duration-300 rounded-md px-3 py-2 hover:bg-blue-50">Skills</a>
@@ -57,7 +57,7 @@
                     Hi, I'm <span class="text-yellow-300">Shazib Armaan</span>
                 </h2>
                 <p class="text-lg sm:text-xl lg:text-2xl opacity-90 animate-fade-in-up delay-200">
-                    A passionate <span class="font-semibold">Software Developer</span> focused on building impactful solutions.
+                    A passionate <span class="font-semibold">Data Analyst</span> focused on extracting impactful insights.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4 pt-6 animate-fade-in-up delay-400">
                     <a href="#projects" class="inline-block bg-white text-blue-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105">
@@ -80,8 +80,8 @@
                     <img src="https://placehold.co/300x300/a0aec0/ffffff?text=Your+Photo" alt="Shazib Armaan" class="rounded-full shadow-xl w-60 h-60 object-cover border-4 border-blue-200">
                 </div>
                 <div class="lg:w-2/3 text-lg leading-relaxed text-gray-700 space-y-6">
-                    <p>I earned a distinction in my Master’s in Data Analytics, where I explored real-world challenges like fraud detection using machine learning. My thesis, “Fraud Detection in Financial Transactions,” reflected my passion for combining data and problem-solving</p>
-                    <p>With a Bachelor's in Software Engineering and certifications in Data Analytics and Cybersecurity (Google), I’ve built a strong foundation in SQL, Python, Power BI, Tableau, and Excel. I’ve completed 30+ academic and personal projects — from sentiment analysis to predictive modeling and dashboard development — and gained hands-on experience in IT support, helping both users and systems run efficiently.</p>
+                    <p>Recently graduated with a Master's in Data Analytics, where I explored real-world challenges like fraud detection using machine learning. My dissertation, “Fraud Detection in Financial Transactions,” reflected my passion for combining data and problem-solving</p>
+                    <p>With a Bachelor's in Software Engineering and certification in Google Data Analytics, I’ve built a strong foundation in SQL, Python, Tableau, and Excel. I’ve completed 15+ academic and personal projects — from sentiment analysis to predictive modeling and dashboard development — and gained hands-on experience in IT support, helping both users and systems run efficiently.</p>
                     <p>What drives me is curiosity. I love asking “why,” finding patterns, and turning raw data into actionable insights. Whether working on financial data, customer engagement, or system optimization, I bring analytical thinking, clear communication, and a proactive mindset.</p>
                     <p>If you're looking for someone who understands data, adapts fast, and thrives on solving problems — let’s connect.</p>
                 </div>
@@ -93,37 +93,39 @@
             <div class="container mx-auto">
                 <h2 class="text-4xl font-bold text-center text-blue-700 mb-12">My Skills</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Frontend Skills -->
+                    <!-- Data Analytics -->
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
                         <i class="fas fa-desktop text-4xl text-blue-500 mb-4"></i>
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-4">Frontend Development</h3>
+                        <h3 class="text-2xl font-semibold text-gray-900 mb-4">Data Analytics</h3>
                         <ul class="list-disc list-inside space-y-2 text-gray-700">
-                            <li>HTML5 & CSS3 (Tailwind CSS, Bootstrap)</li>
-                            <li>JavaScript (ES6+)</li>
-                            <li>React.js / Vue.js (Basics)</li>
-                            <li>Responsive Design</li>
-                        </ul>
-                    </div>
-                    <!-- Backend Skills -->
-                    <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
-                        <i class="fas fa-server text-4xl text-blue-500 mb-4"></i>
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-4">Backend Development</h3>
-                        <ul class="list-disc list-inside space-y-2 text-gray-700">
-                            <li>Python (Django, Flask)</li>
-                            <li>Node.js (Express)</li>
-                            <li>RESTful APIs</li>
-                            <li>Database Management (SQL, NoSQL)</li>
+                            <li>Data Cleaning & Preprocessing</li>
+                            <li>Data Visualisation</li>
+                            <li>Exploratory Data Analysis</li>
+                            <li>Data Storytelling & Reporting</li>
+                            <li>Machine Learning(Basics)<li>
                         </ul>
                     </div>
                     <!-- Tools & Technologies -->
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
-                        <i class="fas fa-tools text-4xl text-blue-500 mb-4"></i>
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-4">Tools & Technologies</h3>
+                        <i class="fas fa-server text-4xl text-blue-500 mb-4"></i>
+                        <h3 class="text-2xl font-semibold text-gray-900 mb-4">Tools and Technologies</h3>
                         <ul class="list-disc list-inside space-y-2 text-gray-700">
-                            <li>Git & GitHub</li>
-                            <li>VS Code</li>
-                            <li>Docker (Basics)</li>
-                            <li>Cloud Platforms (AWS/Azure/GCP - Familiarity)</li>
+                            <li>Python</li>
+                            <li>SQL</li>
+                            <li>Excel</li>
+                            <li>Tableau</li>
+                        </ul>
+                    </div>
+                    <!-- Soft Skills -->
+                    <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
+                        <i class="fas fa-tools text-4xl text-blue-500 mb-4"></i>
+                        <h3 class="text-2xl font-semibold text-gray-900 mb-4">Soft Skills</h3>
+                        <ul class="list-disc list-inside space-y-2 text-gray-700">
+                            <li>Problem Solving</li>
+                            <li>Adaptibility</li>
+                            <li>Attention to Detail</li>
+                            <li>Team Collaboration</li>
+                            <li>Effective Communication</li>
                         </ul>
                     </div>
                 </div>
@@ -134,16 +136,14 @@
         <section id="projects" class="container mx-auto px-4 py-16 sm:py-24">
             <h2 class="text-4xl font-bold text-center text-blue-700 mb-12">My Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
-                <!-- Project Card 1 -->
+                <!-- Project 1: Fraud Detection -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300">
                     <img src="https://placehold.co/600x400/81c784/ffffff?text=Project+1+Image" alt="Project 1" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-2">E-commerce Platform</h3>
-                        <p class="text-gray-700 mb-4">A full-stack e-commerce solution with user authentication, product listings, and a shopping cart functionality. Built with Django and React.</p>
+                        <h3 class="text-2xl font-semibold text-gray-900 mb-2">Fraud Detection Using ML</h3>
+                        <p class="text-gray-700 mb-4">Developed a machine learning pipeline using Python and the IEEE-CIS dataset to detect fraudulent financial transactions. Techniques used include data preprocessing, feature selection, and model evaluation.</p>
                         <div class="flex space-x-4">
-                            <a href="#" target="_blank" class="text-blue-600 hover:text-blue-800 font-medium transition duration-300 flex items-center space-x-2">
-                                <i class="fas fa-link"></i> <span>Live Demo</span>
-                            </a>
+                          </a>
                             <a href="https://github.com/Shazib36/your-ecommerce-repo" target="_blank" class="text-blue-600 hover:text-blue-800 font-medium transition duration-300 flex items-center space-x-2">
                                 <i class="fab fa-github"></i> <span>GitHub</span>
                             </a>
@@ -151,15 +151,13 @@
                     </div>
                 </div>
 
-                <!-- Project Card 2 -->
+                <!-- Project 2: Cyclistic's Riding Patterns -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300">
                     <img src="https://placehold.co/600x400/ffe082/ffffff?text=Project+2+Image" alt="Project 2" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-2">Task Management App</h3>
-                        <p class="text-gray-700 mb-4">A responsive web application for managing tasks, with drag-and-drop functionality and user-specific dashboards. Developed using Node.js and Vue.js.</p>
+                        <h3 class="text-2xl font-semibold text-gray-900 mb-2">Cyclistic's Riding Patterns</h3>
+                        <p class="text-gray-700 mb-4">This project focuses on integrating, cleaning, and analyzing data from Cyclistic, a bike-sharing service, to uncover insights into bike usage patterns and disparities between annual members and casual riders. By merging multiple CSV files and conducting SQL-based analysis, the project aims to provide actionable insights for marketing strategies, service enhancements, and operational decisions.</p>
                         <div class="flex space-x-4">
-                            <a href="#" target="_blank" class="text-blue-600 hover:text-blue-800 font-medium transition duration-300 flex items-center space-x-2">
-                                <i class="fas fa-link"></i> <span>Live Demo</span>
                             </a>
                             <a href="https://github.com/Shazib36/your-task-app-repo" target="_blank" class="text-blue-600 hover:text-blue-800 font-medium transition duration-300 flex items-center space-x-2">
                                 <i class="fab fa-github"></i> <span>GitHub</span>
@@ -168,15 +166,13 @@
                     </div>
                 </div>
 
-                <!-- Project Card 3 -->
+                <!-- Project 3: Google Fiber: Repeated Calls Dashboard -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300">
                     <img src="https://placehold.co/600x400/9fa8da/ffffff?text=Project+3+Image" alt="Project 3" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-2">Personal Blog Site</h3>
-                        <p class="text-gray-700 mb-4">A minimalist blog platform built with Jekyll and hosted on GitHub Pages, featuring Markdown support and custom themes.</p>
+                        <h3 class="text-2xl font-semibold text-gray-900 mb-2">Google Fiber: Repeated Calls Dashboard</h3>
+                        <p class="text-gray-700 mb-4">Google Business Intelligence Capstone Project</p>
                         <div class="flex space-x-4">
-                            <a href="#" target="_blank" class="text-blue-600 hover:text-blue-800 font-medium transition duration-300 flex items-center space-x-2">
-                                <i class="fas fa-link"></i> <span>Live Demo</span>
                             </a>
                             <a href="https://github.com/Shazib36/your-blog-repo" target="_blank" class="text-blue-600 hover:text-blue-800 font-medium transition duration-300 flex items-center space-x-2">
                                 <i class="fab fa-github"></i> <span>GitHub</span>
@@ -192,7 +188,7 @@
             <div class="container mx-auto">
                 <h2 class="text-4xl font-bold text-center text-blue-700 mb-12">Contact Me</h2>
                 <div class="max-w-2xl mx-auto bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
-                    <p class="text-center text-lg text-gray-700 mb-8">Have a question or want to work together? Feel free to reach out!</p>
+                    <p class="text-center text-lg text-gray-700 mb-8">Have a question? Feel free to reach out!</p>
                     <form action="mailto:your_email@example.com" method="post" enctype="text/plain" class="space-y-6">
                         <div>
                             <label for="name" class="block text-gray-800 text-lg font-medium mb-2">Name</label>
@@ -225,7 +221,7 @@
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 text-center">
-        <p>&copy; 2025 Shazib Armaan. All rights reserved.</p>
+        <p>&copy; 2025 Shazib Armaan Patras. All rights reserved.</p>
         <p class="text-sm mt-2">Built with <a href="https://tailwindcss.com/" target="_blank" class="text-blue-400 hover:underline">Tailwind CSS</a>.</p>
     </footer>
 
