--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@
                         <h3 class="text-2xl font-semibold text-gray-900 mb-4">Data Analytics</h3>
                         <ul class="list-disc list-inside space-y-2 text-gray-700">
                             <li>Data Cleaning & Preprocessing</li>
-                            <li>Data Visualisation</li>
-                            <li>Exploratory Data Analysis</li>
-                            <li>Data Storytelling & Reporting</li>
-                            <li>Machine Learning(Basics)<li>
-                        </ul>
+                            <li>Data Visualisation<li>
+                            <li>Exploratory Data Analysis<li>
+                            <li>Data Storytelling & Reporting<li>
+                            <li>Machine Learning<li>
                     </div>
                     <!-- Tools & Technologies -->
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
