--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
     <main>
         <!-- Hero Section -->
-        <section id="home" class="relative bg-gradient-to-r from-blue-500 to-indigo-600 text-white flex items-center justify-center min-h-screen py-16 px-4">
+        <section id="home" class="relative bg-white shadow-lg text-gray-800 flex items-center justify-center min-h-screen py-16 px-4">
             <div class="text-center space-y-6">
                 <h2 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold leading-tight animate-fade-in-up">
-                    Hi, I'm <span class="text-yellow-300">Shazib Armaan</span>
+                    Hi, I'm <span class="text-blue-600">Shazib Armaan</span>
                 </h2>
                 <p class="text-lg sm:text-xl lg:text-2xl opacity-90 animate-fade-in-up delay-200">
                     A passionate <span class="font-semibold">Data Analyst</span> focused on extracting impactful insights.
@@ -64,9 +64,9 @@
                         View My Work
                     </a>
                     <div class="flex space-x-6 text-2xl mt-4 sm:mt-0">
-                        <a href="https://github.com/Shazib36" target="_blank" class="text-white hover:text-gray-200 transition duration-300 transform hover:scale-110" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
-                        <a href="#" target="_blank" class="text-white hover:text-gray-200 transition duration-300 transform hover:scale-110" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
-                        <a href="mailto:your_email@example.com" class="text-white hover:text-gray-200 transition duration-300 transform hover:scale-110" aria-label="Email Me"><i class="fas fa-envelope"></i></a>
+                        <a href="https://github.com/Shazib36" target="_blank" class="text-gray-600 hover:text-blue-600 transition duration-300 transform hover:scale-110" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/shazib-armaan-patras-3a189a163/" target="_blank" class="text-gray-600 hover:text-blue-600 transition duration-300 transform hover:scale-110" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
+                        <a href="shazibarmaan123@outlook.com" class="text-gray-600 hover:text-blue-600 transition duration-300 transform hover:scale-110" aria-label="Email Me"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
@@ -98,11 +98,12 @@
                         <i class="fas fa-desktop text-4xl text-blue-500 mb-4"></i>
                         <h3 class="text-2xl font-semibold text-gray-900 mb-4">Data Analytics</h3>
                         <ul class="list-disc list-inside space-y-2 text-gray-700">
-                            <li>Data Cleaning & Preprocessing</li>
-                            <li>Data Visualisation<li>
-                            <li>Exploratory Data Analysis<li>
-                            <li>Data Storytelling & Reporting<li>
-                            <li>Machine Learning<li>
+                             <li>Data Cleaning & Preprocessing</li>
+                            <li>Data Visualisation</li>
+                            <li>Exploratory Data Analysis</li>
+                            <li>Data Storytelling & Reporting</li>
+                            <li>Machine Learning</li>
+                        </ul>
                     </div>
                     <!-- Tools & Technologies -->
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
