--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     A passionate <span class="font-semibold">Data Analyst</span> focused on extracting impactful insights.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4 pt-6 animate-fade-in-up delay-400">
-                    <a href="#projects" class="inline-block bg-white text-blue-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105">
+                    <a href="#projects" class="inline-block bg-gray text-blue-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105">
                         View My Work
                     </a>
                     <div class="flex space-x-6 text-2xl mt-4 sm:mt-0">
@@ -210,7 +210,7 @@
                         <p class="text-lg text-gray-700 mb-4">Or find me on:</p>
                         <div class="flex justify-center space-x-6 text-3xl">
                             <a href="https://github.com/Shazib36" target="_blank" class="text-gray-600 hover:text-blue-600 transition duration-300" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
-                            <a href="#" target="_blank" class="text-gray-600 hover:text-blue-600 transition duration-300" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/shazib-armaan-patras-3a189a163/" target="_blank" class="text-gray-600 hover:text-blue-600 transition duration-300" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
                             <!-- Add more social media links as needed -->
                         </div>
                     </div>
