--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <main>
         <!-- Hero Section -->
-        <section id="home" class="relative bg-white shadow-lg text-gray-800 flex items-center justify-center min-h-screen py-16 px-4">
+        <section id="home" class="relative bg-cover bg-center bg-no-repeat text-gray-800 flex items-center justify-center min-h-screen py-16 px-4" style="background-image: url('C:\Legion\5153829.jpg');">
             <div class="text-center space-y-6">
                 <h2 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold leading-tight animate-fade-in-up">
                     Hi, I'm <span class="text-blue-600">Shazib Armaan</span>
@@ -60,7 +60,7 @@
                     A passionate <span class="font-semibold">Data Analyst</span> focused on extracting impactful insights.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4 pt-6 animate-fade-in-up delay-400">
-                    <a href="#projects" class="inline-block bg-gray text-blue-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105">
+                    <a href="#projects" class="inline-block bg-white text-blue-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105">
                         View My Work
                     </a>
                     <div class="flex space-x-6 text-2xl mt-4 sm:mt-0">
