--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <main>
         <!-- Hero Section -->
-        <section id="home" class="relative bg-cover bg-center bg-no-repeat text-gray-800 flex items-center justify-center min-h-screen py-16 px-4" style="background-image: url('C:\Legion\5153829.jpg');">
+        <section id="home" class="relative bg-cover bg-center bg-no-repeat text-gray-800 flex items-center justify-center min-h-screen py-16 px-4" style="background-image: url('5153829.jpg');">
             <div class="text-center space-y-6">
                 <h2 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold leading-tight animate-fade-in-up">
                     Hi, I'm <span class="text-blue-600">Shazib Armaan</span>
