--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
                 </div>
 
                 <!-- Project 2: Cyclistic's Riding Patterns -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300">
-                    <img src="https://placehold.co/600x400/ffe082/ffffff?text=Project+2+Image" alt="Project 2" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-2">Cyclistic's Riding Patterns</h3>
-                        <p class="text-gray-700 mb-4">This project focuses on integrating, cleaning, and analyzing data from Cyclistic, a bike-sharing service, to uncover insights into bike usage patterns and disparities between annual members and casual riders. By merging multiple CSV files and conducting SQL-based analysis, the project aims to provide actionable insights for marketing strategies, service enhancements, and operational decisions.</p>
+                <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
+                    style="background-image: url('cyclist.jpg'); background-size: cover; background-position: center;">
+                    <!-- Overlay for text readability -->
+                    <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
+                        <h3 class="text-2xl font-semibold text-white mb-2">Cyclistic's Riding Patterns</h3>
+                        <p class="text-gray-200 mb-4">This project focuses on integrating, cleaning, and analyzing data from Cyclistic, a bike-sharing service, to uncover insights into bike usage patterns and disparities between annual members and casual riders. By merging multiple CSV files and conducting SQL-based analysis, the project aims to provide actionable insights for marketing strategies, service enhancements, and operational decisions.</p>
                         <div class="flex space-x-4">
-                            </a>
-                            <a href="https://github.com/Shazib36/your-task-app-repo" target="_blank" class="text-blue-600 hover:text-blue-800 font-medium transition duration-300 flex items-center space-x-2">
+                            <a href="https://github.com/Shazib36/your-task-app-repo" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
                                 <i class="fab fa-github"></i> <span>GitHub</span>
                             </a>
                         </div>
