--- a/index.html
+++ b/index.html
@@ -137,20 +137,20 @@
             <h2 class="text-4xl font-bold text-center text-blue-700 mb-12">My Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                 <!-- Project 1: Fraud Detection -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300">
-                    <img src="https://placehold.co/600x400/81c784/ffffff?text=Project+1+Image" alt="Project 1" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-2">Fraud Detection Using ML</h3>
-                        <p class="text-gray-700 mb-4">Developed a machine learning pipeline using Python and the IEEE-CIS dataset to detect fraudulent financial transactions. Techniques used include data preprocessing, feature selection, and model evaluation.</p>
+                <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
+                    style="background-image: url('fraud.jpg'); background-size: cover; background-position: center;">
+                    <!-- Overlay for text readability -->
+                    <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
+                        <h3 class="text-2xl font-semibold text-white mb-2">Fraud Detection Using ML</h3>
+                        <p class="text-gray-200 mb-4">Developed a machine learning pipeline using Python and the IEEE-CIS dataset to detect fraudulent financial transactions. Techniques used include data preprocessing, feature selection, and model evaluation.</p>
                         <div class="flex space-x-4">
-                          </a>
-                            <a href="https://github.com/Shazib36/your-ecommerce-repo" target="_blank" class="text-blue-600 hover:text-blue-800 font-medium transition duration-300 flex items-center space-x-2">
+                            <a href="https://github.com/Shazib36/your-ecommerce-repo" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
                                 <i class="fab fa-github"></i> <span>GitHub</span>
                             </a>
                         </div>
                     </div>
                 </div>
-
+                
                 <!-- Project 2: Cyclistic's Riding Patterns -->
                 <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
                     style="background-image: url('cyclist.jpg'); background-size: cover; background-position: center;">
