--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h2 class="text-4xl font-bold text-center text-blue-700 mb-12">About Me</h2>
             <div class="flex flex-col lg:flex-row items-center lg:space-x-12">
                 <div class="lg:w-1/3 flex justify-center mb-8 lg:mb-0">
-                    <img src="https://placehold.co/300x300/a0aec0/ffffff?text=Your+Photo" alt="Shazib Armaan" class="rounded-full shadow-xl w-60 h-60 object-cover border-4 border-blue-200">
+                    <img src="me.jpg" alt="Shazib Armaan" class="rounded-full shadow-xl w-60 h-60 object-cover border-4 border-blue-200">
                 </div>
                 <div class="lg:w-2/3 text-lg leading-relaxed text-gray-700 space-y-6">
                     <p>Recently graduated with a Master's in Data Analytics, where I explored real-world challenges like fraud detection using machine learning. My dissertation, “Fraud Detection in Financial Transactions,” reflected my passion for combining data and problem-solving</p>
