--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="flex space-x-6 text-2xl mt-4 sm:mt-0">
                         <a href="https://github.com/Shazib36" target="_blank" class="text-gray-600 hover:text-blue-600 transition duration-300 transform hover:scale-110" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/shazib-armaan-patras-3a189a163/" target="_blank" class="text-gray-600 hover:text-blue-600 transition duration-300 transform hover:scale-110" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
-                        <a href="shazibarmaan123@outlook.com" class="text-gray-600 hover:text-blue-600 transition duration-300 transform hover:scale-110" aria-label="Email Me"><i class="fas fa-envelope"></i></a>
+                        <a href="mailto:shazibarmaan123@outlook.com" class="text-gray-600 hover:text-blue-600 transition duration-300 transform hover:scale-110" aria-label="Email Me"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
@@ -189,7 +189,7 @@
                 <h2 class="text-4xl font-bold text-center text-blue-700 mb-12">Contact Me</h2>
                 <div class="max-w-2xl mx-auto bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
                     <p class="text-center text-lg text-gray-700 mb-8">Have a question? Feel free to reach out!</p>
-                    <form action="mailto:your_email@example.com" method="post" enctype="text/plain" class="space-y-6">
+                    <form action="mailto:shazibarmaan123@outlook.com" method="post" enctype="text/plain" class="space-y-6">
                         <div>
                             <label for="name" class="block text-gray-800 text-lg font-medium mb-2">Name</label>
                             <input type="text" id="name" name="name" class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-transparent transition duration-300" placeholder="Your Name" required>
