--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <img src="me.jpg" alt="Shazib Armaan" class="rounded-full shadow-xl w-60 h-60 object-cover border-4 border-blue-200">
                 </div>
                 <div class="lg:w-2/3 text-lg leading-relaxed text-gray-700 space-y-6">
-                    <p>Recently graduated with a Master's in Data Analytics, where I explored real-world challenges like fraud detection using machine learning. My dissertation, “Fraud Detection in Financial Transactions,” reflected my passion for combining data and problem-solving</p>
+                    <p>Recently graduated with a Masters in Data Analytics, where I explored real-world challenges like fraud detection using machine learning. My dissertation, “Fraud Detection in Financial Transactions,” reflected my passion for combining data and problem-solving</p>
                     <p>With a Bachelor's in Software Engineering and certification in Google Data Analytics, I’ve built a strong foundation in SQL, Python, Tableau, and Excel. I’ve completed 15+ academic and personal projects — from sentiment analysis to predictive modeling and dashboard development — and gained hands-on experience in IT support, helping both users and systems run efficiently.</p>
                     <p>What drives me is curiosity. I love asking “why,” finding patterns, and turning raw data into actionable insights. Whether working on financial data, customer engagement, or system optimization, I bring analytical thinking, clear communication, and a proactive mindset.</p>
                     <p>If you're looking for someone who understands data, adapts fast, and thrives on solving problems — let’s connect.</p>
