--- a/index.html
+++ b/index.html
@@ -180,18 +180,15 @@
                         </div>
                     </div>
                 </div>
-                <!-- New Project Card 4 -->
+                <!-- Project 4: Covid 19 Data Exploration -->
                 <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
-                    style="background-image: url('https://placehold.co/600x400/8c7ae6/ffffff?text=Project+4+Image'); background-size: cover; background-position: center;">
+                    style="background-image: url('sql.jpeg'); background-size: cover; background-position: center;">
                     <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
-                        <h3 class="text-2xl font-semibold text-white mb-2">Data Cleaning & Transformation</h3>
-                        <p class="text-gray-200 mb-4">A project demonstrating advanced data cleaning, transformation, and validation techniques using Python with Pandas and SQL.</p>
+                        <h3 class="text-2xl font-semibold text-white mb-2">Covid 19 Data Exploration</h3>
+                        <p class="text-gray-200 mb-4">Used SQL Server to clean, transform, and analyze global Covid-19 data from 2020–2021. Applied joins, CTEs, temp tables, window functions, aggregate functions, views, and data type conversions to perform efficient data preprocessing and exploratory data analysis(EDA).</p>
                         <div class="flex space-x-4">
-                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                            <a href="https://github.com/Shazib36/Covid-19-SQL-project" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
                                 <i class="fab fa-github"></i> <span>GitHub</span>
-                            </a>
-                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
-                                <i class="fas fa-link"></i> <span>Live Demo</span>
                             </a>
                         </div>
                     </div>
