--- a/index.html
+++ b/index.html
@@ -194,18 +194,15 @@
                     </div>
                 </div>
 
-                <!-- New Project Card 5 -->
+                <!-- Project 5: SQL Database Management -->
                 <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
-                    style="background-image: url('https://placehold.co/600x400/28a745/ffffff?text=Project+5+Image'); background-size: cover; background-position: center;">
+                    style="background-image: url('sql.jpeg'); background-size: cover; background-position: center;">
                     <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
-                        <h3 class="text-2xl font-semibold text-white mb-2">Predictive Sales Analysis</h3>
-                        <p class="text-gray-200 mb-4">Developed a predictive model to forecast future sales based on historical data, utilizing machine learning algorithms in Python and visualized with Tableau.</p>
+                        <h3 class="text-2xl font-semibold text-white mb-2">SQL Student Database</h3>
+                        <p class="text-gray-200 mb-4">A portfolio project showcasing foundational skills in relational database design (SQL). This system is designed to manage student, course, and enrollment data within an educational context.</p>
                         <div class="flex space-x-4">
-                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                            <a href="https://github.com/Shazib36/SQL-Student-Database" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
                                 <i class="fab fa-github"></i> <span>GitHub</span>
-                            </a>
-                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
-                                <i class="fas fa-link"></i> <span>Live Demo</span>
                             </a>
                         </div>
                     </div>
